also use @TempDir instead of jimfs